plugins {
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'

}
version = "8.5.2"
ext {
    set('springCloudVersion', "2025.0.0")
    set('camelVersion', "4.15.0")
    set('ibmDb2Version', "9.1")
    set('mapstructVersion', "1.6.2")
    set('lombokMapstructBindingVersion', "0.2.0")
    set('bucket4jVersion', "8.15.0")
    set('semver4jVersion', "3.1.0")
    set('janinoVersion',"3.1.12")
}
subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.springframework.boot'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }



    repositories {
        repositories {
            mavenLocal()
            maven {
                url 'https://swd.daneshrefah.ir/artifactory/libs-release/'
                credentials {
                    username = 'builder'
                    password = 'AP9XCqyRCWrtUydrRwLiL7RpuRq'
                }
            }
            mavenCentral()
        }
    }
    bootJar {
        archiveBaseName = project.name  // Use project-specific names
        destinationDirectory = file("$buildDir/libs")
        enabled = false
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
            mavenBom "org.apache.camel.springboot:camel-spring-boot-bom:${camelVersion}"
        }

        dependencies {
            dependency "org.mapstruct:mapstruct:${mapstructVersion}"
            dependency "org.mapstruct:mapstruct-processor:${mapstructVersion}"
            dependency 'org.projectlombok:lombok:1.18.34'
            dependency "org.apache.camel.springboot:camel-spring-boot-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-jackson-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-json-validator-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-http-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-netty-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-netty-http-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-direct-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-timer-starter:${camelVersion}"
            dependency "org.apache.camel:camel-core:${camelVersion}"
//            dependency "org.apache.camel.springboot:camel-opentelemetry-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-spring-security-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-servlet-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-resilience4j-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-rest-openapi-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-bean-validator-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-jsonpath-starter:${camelVersion}"
            dependency "org.apache.camel:camel-openapi-java:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-spring-security-starter:${camelVersion}"
            dependency "org.apache.camel.springboot:camel-netty-starter:${camelVersion}"
            dependency "org.apache.camel:camel-bean:${camelVersion}"
            dependency "com.ibm.db2:db2jcc_license_cisuz:${ibmDb2Version}"
            dependency "com.ibm.db2:db2jcc:${ibmDb2Version}"
            dependency "com.ibm.db2.jcc:db2jcc:db2jcc4"
            dependency "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0"
            dependency "io.springfox:springfox-swagger-ui:3.0.0"
            dependency "com.hazelcast:hazelcast:5.5.0"
            dependency "org.apache.commons:commons-lang3:3.12.0"
            dependency "commons-io:commons-io:2.17.0"
            dependency "org.apache.commons:commons-collections4:4.4"
            dependency "org.apache.commons:commons-text:1.12.0"
            dependency 'org.apache.httpcomponents:httpclient:4.5.13'
            dependency "com.fasterxml.jackson.module:jackson-module-jsonSchema:2.17.2"
            dependency "com.ibm.mq:mq-jms-spring-boot-starter:3.3.3"
            dependency "org.apache.camel:camel-test-spring-junit5:${camelVersion}"
            dependency "com.ibm.mq:mq-jms-spring-boot-starter:3.3.3"
            dependency "com.bucket4j:bucket4j_jdk17-core:${bucket4jVersion}"
            dependency "com.bucket4j:bucket4j_jdk17-hazelcast:${bucket4jVersion}"
            dependency "com.vdurmont:semver4j:${semver4jVersion}"
            dependency "org.codehaus.janino:janino:${janinoVersion}"
        }
    }

    dependencies {
        implementation "org.springframework.boot:spring-boot-starter"
        annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
    }
}